fix: boxes with wrong width

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -5,11 +5,10 @@
   height: 100vh;
   width: 100vw;
   box-sizing: border-box;
-
 }
 
 .panel {
-  width: 520px;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
