--- a/frontend/src/svg_wrap.css
+++ b/frontend/src/svg_wrap.css
@@ -4,7 +4,7 @@
 
   background-color: var(--surface-color);
 
-  min-width: 65%;
+  width: 100%;
   height: 100%;
   border-radius: 10px;
   padding: 8px;
